# gz_ros2_control_manager

./: .gitignore  CMakeLists.txt  ControlManagerPlugin.qrc  README.md  Ros2ControlManagerGui.qrc  package.xml
config/: control_manager.config  diffbot_controllers.yaml
env-hooks/: gz_ros2_control_manager.sh.in
gui/: ControlManagerPanel.qml  Ros2ControlManagerGui.qml
include/gz_ros2_control_manager/: ControlManagerPlugin.hh  ControllerManagerClient.hh  Ros2ControlDiscovery.hh  Ros2ControlManagerGui.hh
launch/: control_manager_demo.launch.py
src/: ControlManagerPlugin.cc  ControllerManagerClient.cc  Ros2ControlDiscovery.cc  Ros2ControlManagerGui.cc
test/: test_controller_action.cpp  test_ros2_control_discovery.cpp
urdf/: diffbot.urdf.xacro
worlds/: control_manager_demo.sdf
